--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/5cb2a5d234.js"></script>
-    <title>Welcome to Edgeledger</title>
+    <title>Welcome to EdgeLedger</title>
 </head>
-<body>
+<body id="home">
+    <header class="hero">
+        <div id="navbar" class="navbar">
+            <h1 class="logo">
+                <span><i class="fas fa-book-open"></i> Edge</span>Ledger
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#cases">Cases</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     
 </body>
 </html>
