--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/5cb2a5d234.js"></script>
     <title>Welcome to EdgeLedger</title>
 </head>
@@ -28,7 +29,8 @@
         <div class="content">
             <h1>The Sky Is The Limit</h1>
             <p>We provide world class financial assistance</p>
-            <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
+            <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>
+            Read More</a>
         </div>
     </header>
     
