--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="hero">
         <div id="navbar" class="navbar">
             <h1 class="logo">
-                <span><i class="fas fa-book-open"></i> Edge</span>Ledger
+                <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
             </h1>
             <nav>
                 <ul>
