adds styling and content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="https://use.fontawesome.com/5cb2a5d234.js"></script>
     <title>Welcome to EdgeLedger</title>
 </head>
+
 <body id="home">
     <header class="hero">
         <div id="navbar" class="navbar">
@@ -30,9 +32,65 @@
             <h1>The Sky Is The Limit</h1>
             <p>We provide world class financial assistance</p>
             <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>
-            Read More</a>
+                Read More</a>
         </div>
     </header>
-    
+
+    <main>
+        <!-- About: Icons -->
+        <section id="about" class="icons bg-light">
+            <div class="flex-items">
+                <div>
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Investment Banking</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, tempore.</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas book-reader fa-2x"></i>
+                    <div>
+                        <h3>Portfolio Manager</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, tempore.</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-pencil-alt fa-2x"></i>
+                    <div>
+                        <h3>Tax & Custodial</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, tempore.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About: Solutions -->
+        <section class="solutions flex-colums">
+            <div class="row">
+                <div class="column">
+                    <div class="cloumn-1">
+                        <img src="images/home/people.jpg" alt="">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2">
+                        <h4>What you are looking for</h4>
+                        <h2>We provide bespoke solutions</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             Perferendis qui cumque dolor quia nobis reiciendis, 
+                            exercitationem ex recusandae officiis a necessitatibus 
+                            repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
+                            <a href="#" class="btn btn-outline">
+                                <i class="fas fa-chevron"></i> 
+                                Read More
+                            </a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
