--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </header>
 
     <main>
+
         <!-- About: Icons -->
+
         <section id="about" class="icons bg-light">
             <div class="flex-items">
                 <div>
@@ -65,6 +67,7 @@
         </section>
 
         <!-- About: Solutions -->
+
         <section class="solutions flex-columns">
             <div class="row">
                 <div class="column">
@@ -77,13 +80,13 @@
                         <h4>What you are looking for</h4>
                         <h2>We provide bespoke solutions</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                             Perferendis qui cumque dolor quia nobis reiciendis, 
-                            exercitationem ex recusandae officiis a necessitatibus 
+                            Perferendis qui cumque dolor quia nobis reiciendis,
+                            exercitationem ex recusandae officiis a necessitatibus
                             repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
-                            <a href="#" class="btn btn-outline">
-                                <i class="fas fa-chevron"></i> 
-                                Read More
-                            </a>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read More
+                        </a>
                     </div>
 
                 </div>
@@ -91,6 +94,7 @@
         </section>
 
         <!-- Cases -->
+
         <section id="cases" class="cases flex-grid section-padding">
             <header class="section-header">
                 <h4>This is what we do</h4>
@@ -116,7 +120,9 @@
                 </div>
             </div>
         </section>
-<!-- Blog -->
+
+        <!-- Blog -->
+
         <section id="blog" class="blog flex-columns flex-reverse">
             <div class="row">
                 <div class="column">
@@ -129,19 +135,96 @@
                         <h4>April 09 2020</h4>
                         <h2>Blog Post One</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                             Perferendis qui cumque dolor quia nobis reiciendis, 
-                            exercitationem ex recusandae officiis a necessitatibus 
+                            Perferendis qui cumque dolor quia nobis reiciendis,
+                            exercitationem ex recusandae officiis a necessitatibus
                             repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
-                            <a href="#" class="btn btn-outline">
-                                <i class="fas fa-chevron"></i> 
-                                Read Our Blog
-                            </a>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read Our Blog
+                        </a>
                     </div>
 
                 </div>
             </div>
         </section>
+
+        <!-- Team -->
+
+        <section id="team" class="team section-padding">
+            <header class="section-header">
+                <h4>Who we are</h4>
+                <h2>Our professional team</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.</p>
+            </header>
+            <div class="flex-items">
+                <div>
+                    <img src="images/team/person1.jpg" alt="">
+                    <h4>John Doe</h4>
+                    <p>President</p>
+                </div>
+                 <div>
+                    <img src="images/team/person2.jpg" alt="">
+                    <h4>Jane Doe</h4>
+                    <p>Vice President</p>
+                </div>
+                 <div>
+                    <img src="images/team/person3.jpg" alt="">
+                    <h4>Steve Smith</h4>
+                    <p>Marketing Head</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact -->
+
+        <section id="contact" class="contact flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="images/home/contact.jpg" alt="">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-light">
+                        <h2>Request Callback</h2>
+                        <form action="" class="callback-form">
+                            <div class="form-control">
+                                <label for="Enter name">
+                                    <input type="text" id="name" name="name" placeholder="name">
+                                </label>
+                            </div>
+                            <div class="form-control">
+                                <label for="email">
+                                    <input type="email" id="email" name="email" placeholder="Enter email">
+                                </label>
+                            </div>
+                            <div class="form-control">
+                                <label for="phone">
+                                    <input type="text" id="phone" name="phone" placeholder="Enter phone">
+                                </label>
+                            </div>
+                            <input type="submit" value="send" id="submit" class="btn">
+                        </form>
+                            Read More
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
     </main>
+
+    <footer class="footer bg-dark">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+        </div>
+        <p>Copyright &copy; 2020 - EdgeLedger</p>
+    </footer>
 
 </body>
 
