--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             Perferendis qui cumque dolor quia nobis reiciendis,
                             exercitationem ex recusandae officiis a necessitatibus
                             repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
-                        <a href="#" class="btn btn-outline">
+                        <a href="blog.html" class="btn btn-outline">
                             <i class="fas fa-chevron"></i>
                             Read Our Blog
                         </a>
