--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                             Perferendis qui cumque dolor quia nobis reiciendis,
                             exercitationem ex recusandae officiis a necessitatibus
                             repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
-                        <a href="#" class="btn btn-dark">
+                        <a href="post.html" class="btn btn-dark">
                             <i class="fas fa-chevron"></i>
                             Read More
                         </a>
@@ -64,7 +64,7 @@
             </div>
         </article>
 
-        <article class="flex-columns">
+        <article class="flex-columns flex-reverse">
             <div class="row">
                 <div class="column">
                     <div class="column-1">
@@ -83,7 +83,7 @@
                             Perferendis qui cumque dolor quia nobis reiciendis,
                             exercitationem ex recusandae officiis a necessitatibus
                             repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
-                        <a href="#" class="btn btn-light">
+                        <a href="post.html" class="btn btn-light">
                             <i class="fas fa-chevron"></i>
                             Read More
                         </a>
@@ -112,7 +112,7 @@
                             Perferendis qui cumque dolor quia nobis reiciendis,
                             exercitationem ex recusandae officiis a necessitatibus
                             repellendus obcaecati nemo quis, laborum saepe dicta vitae accusamus?</p>
-                        <a href="#" class="btn btn-dark">
+                        <a href="post.html" class="btn btn-dark">
                             <i class="fas fa-chevron"></i>
                             Read More
                         </a>
