--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
                     <h4>John Doe</h4>
                     <p>President</p>
                 </div>
-                 <div>
+                <div>
                     <img src="images/team/person2.jpg" alt="">
                     <h4>Jane Doe</h4>
                     <p>Vice President</p>
                 </div>
-                 <div>
+                <div>
                     <img src="images/team/person3.jpg" alt="">
                     <h4>Steve Smith</h4>
                     <p>Marketing Head</p>
@@ -205,7 +205,7 @@
                             </div>
                             <input type="submit" value="send" id="submit" class="btn">
                         </form>
-                            Read More
+                        Read More
                         </a>
                     </div>
 
@@ -225,7 +225,27 @@
         </div>
         <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
+    <script>
+        const navbar = document.getElementById('navbar');
+        let scrolled = false;
 
+        window.onscroll = function () {
+            if (window.pageYOffset > 100) {
+                navbar.classList.remove('top');
+                if(!scrolled) {
+                   navbar.style.transform = 'translateY(-70px)'; 
+                }
+                setTimeout(function() {
+                    navbar.style.transform = 'translateY(0)'; 
+                    scrolled = true;
+                },200);
+            } else {
+                navbar.classList.add('top');
+                scrolled = false;
+            }
+        }
+
+    </script>
 </body>
 
 </html>
