--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         </div>
         <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
         const navbar = document.getElementById('navbar');
         let scrolled = false;
@@ -232,18 +234,36 @@
         window.onscroll = function () {
             if (window.pageYOffset > 100) {
                 navbar.classList.remove('top');
-                if(!scrolled) {
-                   navbar.style.transform = 'translateY(-70px)'; 
+                if (!scrolled) {
+                    navbar.style.transform = 'translateY(-70px)';
                 }
-                setTimeout(function() {
-                    navbar.style.transform = 'translateY(0)'; 
+                setTimeout(function () {
+                    navbar.style.transform = 'translateY(0)';
                     scrolled = true;
-                },200);
+                }, 200);
             } else {
                 navbar.classList.add('top');
                 scrolled = false;
             }
         }
+
+        //Smooth scrolling
+        $('#navbar a, .btn').on('click', function (e) {
+            if (this.hash !== '') {
+                e.preventdefault();
+
+                const hash = this.hash;
+
+                $('html, body').animate(
+                    {
+                        scrollTop: $(has).offset().top - 100,
+                    },
+                    800
+                );
+            }
+
+        });
+
 
     </script>
 </body>
