--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -103,20 +105,53 @@
             </header>
             <div class="row">
                 <div class="column">
+                    <a href="images/cases/cases1.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases1.jpg" alt="">
+                    </a>
+                    <a href="images/cases/cases2.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases2.jpg" alt="">
+                    </a>
+                    
                 </div>
                 <div class="column">
+                    <a href="images/cases/cases3.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases3.jpg" alt="">
+                    </a>
+                    <a href="images/cases/cases4.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases4.jpg" alt="">
+                    </a>
                 </div>
                 <div class="column">
+                    <a href="images/cases/cases5.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases5.jpg" alt="">
+                    </a>
+                    <a href="images/cases/cases6.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases6.jpg" alt="">
+                    </a>
                 </div>
                 <div class="column">
+                    <a href="images/cases/cases7.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases7.jpg" alt="">
+                    </a>
+                    <a href="images/cases/cases8.jpg" 
+                    data-lightbox="cases" 
+                    data-title="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, nesciunt.">
                     <img src="images/cases/cases8.jpg" alt="">
+                    </a>
                 </div>
             </div>
         </section>
@@ -227,6 +262,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="js/lightbox.min.js"></script>
     <script>
         const navbar = document.getElementById('navbar');
         let scrolled = false;
