--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         }
 
         //Smooth scrolling
-        $('#navbar a, .btn').on('click', function (e) {
+        $('#navbar a').on('click', function (e) {
             if (this.hash !== '') {
                 e.preventdefault();
 
