--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <script src="https://use.fontawesome.com/5cb2a5d234.js"></script>
+    <script src="https://kit.fontawesome.com/21533b0dee.js" crossorigin="anonymous"></script>
     <title>Welcome to EdgeLedger</title>
 </head>
 
